deploy/k8s/blog-drupal-app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-drupal-app
spec:
  selector:
    matchLabels:
      app: blog-drupal-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: blog-drupal-app
    spec:
      containers:
        - name: app
          image: schala/blog-drupal:latest
          readinessProbe:
            httpGet:
              path: /user/login
              port: 8080
              httpHeaders:
                - name: Host
                  value: localhost
            initialDelaySeconds: 5
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /user/login
              port: 8080
              httpHeaders:
                - name: Host
                  value: localhost
            initialDelaySeconds: 5
            periodSeconds: 3
          resources:
            requests:
              cpu: 100m
              memory: 100M
            limits:
              cpu: 2000m
              memory: 4000M
          volumeMounts:
            - name: blog-drupal-files
              mountPath: /var/www/html/web/sites/default/files
      volumes:
        - name: blog-drupal-files
          persistentVolumeClaim:
            claimName: blog-drupal-app-files-pvc
