deploy/k8s/blog-drupal-mariadb-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-drupal-mariadb
spec:
  selector:
    matchLabels:
      app: blog-drupal-mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: blog-drupal-mariadb
    spec:
      containers:
        - image: mariadb:10
          name: mariadb
          ports:
            - containerPort: 3306
          resources:
            requests:
              cpu: 100m
              memory: 100M
            limits:
              cpu: 2000m
              memory: 4000M
          volumeMounts:
            - name: blog-drupal-mariadb-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: blog-drupal-mariadb-persistent-storage
          persistentVolumeClaim:
            claimName: blog-drupal-mariadb-pvc
