deploy/k8s/blog-drupal-mariadb-pma-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-drupal-phpmyadmin
  labels:
    app: blog-drupal-phpmyadmin
spec:
  replicas: 0
  selector:
    matchLabels:
      app: blog-drupal-phpmyadmin
  template:
    metadata:
      labels:
        app: blog-drupal-phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin/phpmyadmin
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 100M
            limits:
              cpu: 2000m
              memory: 4000M
