deploy/k8s/blog-drupal-app-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blog-drupal-app-svc
  namespace: default
spec:
  ports:
    - name: nginx
      port: 8080
  selector:
    app: blog-drupal-app
