deploy/k8s/blog-drupal-mariadb-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blog-drupal-mariadb
spec:
  ports:
    - port: 3306
  selector:
    app: blog-drupal-mariadb
  clusterIP: None
